--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <link href="./js/libs/openlayers_2.13.1/theme/default/style.css" rel="stylesheet" type="text/css" />
 
         <script src="http://openlayers.org/api/OpenLayers.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui/0.4.0/angular-ui.js"></script> 
+        <script src="./js/libs/ui-bootstrap-0.12.1.min.js"></script> 
         <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
         <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
         <script src="./js/libs/proj4js-combined.js"></script>
@@ -50,7 +51,7 @@
             <div id="ButtonsContainer">
                 <div id="LegendContainer" class="floatleft" ng-controller="LegendController">
                     <div class="floatleft">
-                        <a tabindex="1" href="#" id="legend" type="button" ng-click="onLegendButtonClick()"
+                        <a tabindex="1" href="#" id="legend" type="button" ng-click="displayLegendPopup('OrdnanceSurvey','sm')"
                            class="legend button-active">{{Strings.legendButtonLabel}}</a>
                     </div>
                 </div>
